# dbtobsb

./: .gitignore  AGENTS.md  LICENSE  README.md  databricks.yml  zensical.toml
.agents/skills/install-and-run-dbtobsb/: SKILL.md
.dbtobsb-bundle-base/: 00-base.yml
.github/workflows/: capture.yml  docs.yml  publication-safety.yml  quality.yml
app/: app.yaml  pyproject.toml
app/dbtobsb_app/: __init__.py  configuration.py  main.py  models.py  repository.py  ui.py
app/tests/: test_configuration.py  test_http.py  test_main.py  test_repository.py
capture/: README.md  pyproject.toml
capture/examples/: inspect_valid_fixture.py
capture/scripts/: generate_artifact_pair_fixtures.py  generate_report_schema.py
capture/src/dbtobsb_capture/: __init__.py  archive.py  cli.py  contracts.py  inspector.py  projection.py  registry.py  schemas.py
capture/src/dbtobsb_capture/schemas/: artifact-pair-report-v1.json
capture/tests/: test_archive.py  test_artifact_pair.py  test_cli.py  test_documentation.py  test_fixture_generator.py
capture/tests/fixture_source/: .gitignore  dbt_project.yml  profiles.yml  selectors.yml
capture/tests/fixture_source/functions/: fixture_double.sql  fixture_double.yml
capture/tests/fixture_source/macros/: fixture_macro.sql
capture/tests/fixture_source/models/: metricflow_time_spine.sql  observed_model.sql  semantic.yml  sources.yml
capture/tests/fixture_source/seeds/: observed_seed.csv
capture/tests/fixture_source/snapshots/: observed_snapshot.sql
capture/tests/fixtures/artifact_pair/invalid_invocation_mismatch/: expected-report.json  manifest.json  provenance.json  run_results.json
capture/tests/fixtures/artifact_pair/valid_dbt_failure/: expected-report.json  manifest.json  provenance.json  run_results.json
capture/tests/fixtures/artifact_pair/valid_success/: expected-report.json  provenance.json  run_results.json
collector/: pyproject.toml
collector/src/dbtobsb_collector/: __init__.py  bootstrap.py  contracts.py  custody.py  delta.py  deployment.py  download.py  entrypoints.py  jobs.py  naming.py  reconcile.py  runner.py  runtime.py  volume_archive.py
collector/src/dbtobsb_collector/_generated/: __init__.py
collector/tests/: test_bootstrap.py  test_delta.py  test_deployment.py  test_download.py  test_entrypoints.py  test_jobs.py  test_reconcile.py  test_runner.py  test_runtime.py  test_volume_archive.py
contracts/: pyproject.toml
contracts/scripts/: check_bundle_commands.py
contracts/src/dbtobsb_contracts/: __init__.py  base_observability.py  bootstrap-operation-registry-v1-vectors.json  commands.py  configuration.py  diagnostics.py  policy.py  support-manifest-v1.json  support.py
contracts/tests/: test_bundle_checker.py  test_commands.py  test_configuration.py  test_policy.py  test_release_contract.py  test_support.py
demo_dbt/: dbt_project.yml  profiles.yml  selectors.yml
demo_dbt/models/: daily_weather_summary.sql  schema.yml  stg_weather.sql  weather_alerts.sql
demo_dbt/seeds/: weather_observations.csv
docs/: index.md
docs/decisions/: 0001-private-app-bundle.md  0002-correct-p1.1-invocation-recovery-text.md  0003-native-hybrid-collector.md
docs/developers/: index.md
docs/developers/explanation/: pair-validity-vs-dbt-outcome-vs-capture-state.md  raw-artifact-custody.md
docs/developers/how-to/: diagnose-an-invalid-artifact-pair.md  handle-raw-dbt-artifacts-safely.md
docs/developers/reference/: cli-report-and-exit-codes.md  python-api.md
docs/developers/tutorials/: inspect-an-artifact-pair.md
docs/evidence/: p0-live-smoke-2026-07-15.md  p1.1-local-artifact-pair-2026-07-15.md  p2-live-capture-2026-07-16.md  v0.3.0-live-acceptance-2026-07-16.md  v0.3.0-live-acceptance-2026-07-17.md  v0.3.0-stable-acceptance-2026-07-18.md  v0.4.0-live-acceptance-2026-07-22.md  v0.5.0-live-acceptance-2026-07-22.md
docs/operators/: index.md
docs/operators/how-to/: cleanup.md  reconcile-collection.md  reconcile-installation.md  recover-capture-states.md  wire-a-dbt-job.md
docs/operators/reference/: compatibility-and-limitations.md  evidence-schema.md  security-and-permissions.md
docs/operators/tutorials/: first-capture.md  (+1 more)
docs/plans/: documentation-plan.md  product-plan.md  review-process.md
docs/releases/: v0.3.0-support-contract.md  v0.4.0-support-contract.md  v0.5.0-support-contract.md
docs/research/: source-register.md
docs/reviews/: README.md
docs/site/: index.md
docs/templates/: p0-smoke-run-record.md
examples/customer_weather/: dbt_project.yml  selectors.yml
installer/: pyproject.toml
installer/src/dbtobsb_installer/: __init__.py  app_bindings.py  app_lifecycle.py  auth.py  bootstrap_operations.py  journals.py  native_bridge.py  onboarding.py  operations.py  platform_adapters.py  recovery.py  release_cli.py  runtime_seal.py  runtime_trust.py  statement_contracts.py  workflow.py
installer/tests/: test_app_bindings.py  test_app_lifecycle.py  test_journals.py  test_onboarding.py  test_operation_registry.py  test_platform_adapters.py  test_release_cli.py  test_runtime_seal.py  test_runtime_trust.py  test_statement_foundation.py
installer/tests/runtime_trust_vectors/: generate.py  vectors-v1.json  verify.mjs
native/: README.md  go.mod  go.sum
native/bridge/: auth.go  bootstrap_registry.go  bootstrap_registry_test.go  bridge_test.go  engine.go  environment.go  operations.go  protocol.go  statement_operations.go  statement_operations_test.go
native/release/: manifest.json  verify.go  verify_test.go
qualification/dbt-runtime/: pyproject.toml
qualification_dbt/: dbt_project.yml  profiles.yml  selectors.yml
qualification_dbt/models/: daily_weather_operations.sql  schema.yml  stg_weather_observations.sql  weather_operations_alerts.sql
qualification_dbt/seeds/: weather_observations.csv
scripts/: build_installer_release.py  check_all.sh  check_app.sh  check_capture.sh  check_collector.sh  check_contracts.sh  check_docs.sh  check_installer.sh  check_installer_release.sh  check_markdown_links.py  check_native.sh  check_publication_safety.sh  smoke_databricks_app.sh
(+167 files in other folders)
