[project]
name = "dbtobsb-app"
version = "0.1.0"
description = "Customer-local dbt Core observability for Databricks"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "httpx2>=2,<3",
    "pytest>=8.3,<10",
    "pyyaml>=6,<7",
    "ruff==0.15.21",
    "ty==0.0.58",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.11"

[tool.hatch.build.targets.wheel]
packages = ["dbtobsb_app"]
