[project]
name = "dbtobsb-app"
version = "0.3.0b1"
description = "Customer-local dbt Core observability for Databricks"
requires-python = ">=3.11,<3.12"
dependencies = [
    "databricks-sdk==0.117.0",
    "databricks-sql-connector==4.3.0",
    "fastapi==0.139.0",
    "pydantic==2.13.4",
    "uvicorn[standard]==0.51.0",
]

[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "httpx2==2.7.0",
    "pytest==9.1.1",
    "pyyaml==6.0.3",
    "ruff==0.15.21",
    "ty==0.0.58",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.11"

[tool.hatch.build.targets.wheel]
packages = ["dbtobsb_app"]
