[project]
name = "dbtobsb-contracts"
version = "0.3.0b1"
description = "Executable support and command contracts for dbtobsb"
requires-python = ">=3.12,<3.13"
dependencies = []

[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "dbt-adapters==1.24.5",
    "dbt-common==1.37.5",
    "dbt-core==1.11.12",
    "dbt-protos==1.0.541",
    "PyYAML==6.0.3",
    "pytest==9.0.3",
    "ruff==0.15.21",
    "ty==0.0.58",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.12"

[tool.hatch.build.targets.wheel]
packages = ["src/dbtobsb_contracts"]

[tool.hatch.build.targets.wheel.force-include]
"src/dbtobsb_contracts/support-manifest-v1.json" = "dbtobsb_contracts/support-manifest-v1.json"
"src/dbtobsb_contracts/bootstrap-operation-registry-v1-vectors.json" = "dbtobsb_contracts/bootstrap-operation-registry-v1-vectors.json"
