[project]
name = "dbtobsb-installer"
version = "0.1.0b1"
description = "Attended local installer utilities for dbtobsb"
requires-python = ">=3.12,<3.13"
dependencies = [
    "cryptography==49.0.0",
    "databricks-sdk==0.120.0",
    "dbt-adapters==1.24.5",
    "dbt-common==1.37.5",
    "dbt-core==1.11.12",
    "dbt-protos==1.0.541",
    "dbtobsb-collector==0.3.0b1",
    "pyyaml==6.0.3",
]

[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[project.scripts]
dbtobsb-build-runtime-candidate = "dbtobsb_installer.runtime_seal:main"
dbtobsb-onboard-dbt-project = "dbtobsb_installer.onboarding:main"
dbtobsb-render-app-stage = "dbtobsb_installer.app_bindings:main"

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "ruff==0.15.21",
    "ty==0.0.58",
]

[tool.uv.sources]
dbtobsb-collector = { path = "../collector" }

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -q"
testpaths = ["tests"]
pythonpath = ["../collector/src", "../capture/src", "../contracts/src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.12"
extra-paths = ["../collector/src", "../capture/src", "../contracts/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/dbtobsb_installer"]
